--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,20 @@
 body 
 {
-    color: deeppink;
-    text-align: center;
+    color: #333;
+    text-align: left;
     font-family: "arial";
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 3px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
